fixed the accordian collapse icon

--- a/scss/faq-accordian.scss
+++ b/scss/faq-accordian.scss
@@ -40,7 +40,7 @@ section#faq{
         }
     }
     
-    .asnwer.hideContent{
+    .asnwer.hide-content{
         display:none;
         opacity: 0;
         animation-name: hideAnswer;
@@ -66,6 +66,13 @@ section#faq{
                 display: block;
                 background-size: contain;
                 float: right;
+                background-repeat: no-repeat;
+            }
+
+            i.faq-icon.close-icon{
+                background-image: url(../images/subtract-ico.svg);
+                background-position: 50% 50%;
+                background-repeat: no-repeat;
             }
         }
         
